--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<label>AAAAAAAAA</label>
+	<label>Login:</label>
+	<input value="AA">
+	<label>Senha:</label>
+	<input value="BB">
 </body>
 </html>
