--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 	<label>Login:</label>
-	<input value="AA">
+	<input value="">
+	<br/>
 	<label>Senha:</label>
-	<input value="BB">
+	<input value="">
 </body>
 </html>
